# Trend-News-Notifier

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  subscriptions.db  test_email.py  test_save_trends.py
.github/workflows/: ci.yml
src/frontend/: package-lock.json  package.json  vite.config.ts
src/frontend/src/: App.tsx  index.css
src/news_agent/agents/: base_agent.py  schema.py
src/news_agent/agents/chat/: chat_agent.py
src/news_agent/agents/db/: db.py  mapping.py  sql_db.py  sqlachemy_db.py  subscriptions.py  tag.py  trend.py
src/news_agent/agents/ingestion/: abstract.py  handlers.py  ingestion.py  local_search_mcp_server.py  serpapi_search_mcp_server.py
src/news_agent/agents/planner/: planner.py
src/news_agent/agents/sender/: abstract.py  email_sender.py
src/news_agent/agents/validator/: deduplication_agent.py
src/news_agent/app/: main.py  schemas.py  state.py
src/news_agent/app/routes/: chat.py  subscriptions.py
src/news_agent/app/services/: agent_manager.py
src/news_agent/config/: general_config.json  ingest_mcp_config.json  mcpservers_config.json  planner_config.json  settings.py
src/news_agent/observability/: otel-collector-config.yaml  prometheus.yml  setup_telemetry.py  telemtry_middleware.py
tests/: conftest.py
tests/unit/: test_db.py  test_deduplicate.py  test_ingestion.py
